// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding sources add corresponding breakpoints for a changed source 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 7,
    "sourceId": "bar.js",
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
  "hidden": false,
  "id": "bar.js:7:",
  "location": Object {
    "line": 7,
    "sourceId": "bar.js",
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
}
`;

exports[`adding sources updates a corresponding breakpoint for a changed source 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/bar.js/originalSource",
  },
  "hidden": false,
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceId": "bar.js/originalSource",
    "sourceUrl": "http://localhost:8000/examples/bar.js/originalSource",
  },
}
`;

exports[`adding sources updates pending breakpoints for a changed source 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 7,
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
  "location": Object {
    "column": undefined,
    "line": 7,
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
}
`;

exports[`initializing when pending breakpoints exist in prefs syncs pending breakpoints 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
  "hidden": false,
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
}
`;

exports[`invalid breakpoint location a corrected corresponding pending breakpoint is added 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 7,
    "sourceUrl": "http://localhost:8000/examples/foo.js",
  },
  "location": Object {
    "column": undefined,
    "line": 7,
    "sourceUrl": "http://localhost:8000/examples/foo.js",
  },
}
`;

exports[`when adding breakpoints a corresponding pending breakpoint should be added 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo.js",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo.js",
  },
}
`;

exports[`when adding breakpoints adding and deleting breakpoints add a corresponding pendingBreakpoint for each addition 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
}
`;

exports[`when adding breakpoints adding and deleting breakpoints add a corresponding pendingBreakpoint for each addition 2`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo2",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo2",
  },
}
`;
